janetrs_macros/tests/09-version-wrong.stderr
error: the argument must be a string literal
 --> $DIR/09-version-wrong:3:17
  |
3 | #[janet_version(wrong)]
  |                 ^^^^^

error: invalid string literal: invalid digit found in string
 --> $DIR/09-version-wrong:8:17
  |
8 | #[janet_version("1,12,10")]
  |                 ^^^^^^^^^

error: invalid string literal: invalid digit found in string
  --> $DIR/09-version-wrong:13:17
   |
13 | #[janet_version("aaaaaa")]
   |                 ^^^^^^^^

error: expected at least one argument to the janet_version proc-macro
  --> $DIR/09-version-wrong:18:1
   |
18 | #[janet_version()]
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `janet_version` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid string literal: invalid digit found in string
  --> $DIR/09-version-wrong:23:22
   |
23 | #[janet_version("1", "aaa")]
   |                      ^^^^^

error: expected at max two argument to the janet_version proc-macro
  --> $DIR/09-version-wrong:28:17
   |
28 | #[janet_version("1", "2", "3")]
   |                 ^^^^^^^^^^^^^
